Renamed exampleScriptsLoader to webchartsLoader.js.

--- a/performance/chart.html
+++ b/performance/chart.html
@@ -11,8 +11,8 @@
     </script>
 
     <script defer type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script defer type="text/javascript" src="../exampleScriptsLoader.js"></script>
-    
+    <script defer type="text/javascript" src="../webchartsLoader.js"></script>
+
     <style>
         ni-chart {
             display: inline-block;
