--- a/examples/audio-graph.html
+++ b/examples/audio-graph.html
@@ -12,7 +12,7 @@
     </script>
 
     <script defer type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script defer type="text/javascript" src="../exampleScriptsLoader.js"></script>
+    <script defer type="text/javascript" src="../webchartsLoader.js"></script>
 
     <style>
         #page-wrap {
