--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -18,7 +18,7 @@
     </script>
 
     <script defer type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script defer type="text/javascript" src="../exampleScriptsLoader.js"></script>
+    <script defer type="text/javascript" src="../webchartsLoader.js"></script>
 
     <script defer type="text/javascript" src="../node_modules/pako/dist/pako.min.js"></script>
 
