--- a/performance/intensity-graph.html
+++ b/performance/intensity-graph.html
@@ -11,7 +11,7 @@
     </script>
 
     <script defer type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script defer type="text/javascript" src="../exampleScriptsLoader.js"></script>
+    <script defer type="text/javascript" src="../webchartsLoader.js"></script>
 
     <style>
         ni-intensity-graph {
