Replaced html imports with js loader (#37)
* Replaced multiple html imports with js script loader. Still a few to go.

* Moved ni-data-types.min.js above query.flot.charting.js in exampleScripts.json. Added index.js to exampleScripts.json. Replaced html imports with js loader.

* Moved the content of the exampleScript.json file to the loader.

* Renamed exampleScriptsLoader to webchartsLoader.js.

--- a/examples/chart_demo.html
+++ b/examples/chart_demo.html
@@ -16,26 +16,7 @@
     </script>
 
     <script defer type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script defer type="text/javascript" src="../node_modules/engineering-flot/lib/jquery.event.drag.js"></script>
-    <script defer type="text/javascript" src="../node_modules/engineering-flot/lib/jquery.mousewheel.js"></script>
-    <script defer type="text/javascript" src="../node_modules/engineering-flot/dist/es5/jquery.flot.js"></script>
-    <script defer type="text/javascript" src="../node_modules/flot-cursors-plugin/dist/es5/jquery.flot.cursors.js"></script>
-    <script defer type="text/javascript" src="../node_modules/flot-charting-plugin/dist/es5/jquery.flot.charting.js"></script>
-    <script defer type="text/javascript" src="../node_modules/flot-intensitygraph-plugin/jquery.flot.intensitygraph.js"></script>
-    <script defer type="text/javascript" src="../node_modules/three/build/three.min.js"></script>
-    <script defer type="text/javascript" src="../node_modules/flot-glplotter-plugin/jquery.flot.glplotter.js"></script>
-    <script defer type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
-    <script defer type="text/javascript" src="../node_modules/@jqwidgets/jqx-element/source-minified/jqxelement-polyfills.js"></script>
-    <script defer type="text/javascript" src="../node_modules/@jqwidgets/jqx-element/source-minified/jqxelement.js"></script>
-    <script defer type="text/javascript" src="../node_modules/ni-data-types/dist/es5-minified/ni-data-types.min.js"></script>
-
-    <script defer type="text/javascript" src="../node_modules/ni-webcharts/dist/es5-minified/element.min.js"></script>
-    <script defer type="text/javascript" src="../node_modules/ni-webcharts/dist/es5-minified/webcharts.min.js"></script>
-
-    <script defer type="text/javascript" src="../node_modules/jqwidgets-scripts/jqwidgets/jqx-all.js"></script>
-    <script defer type="text/javascript" src="../node_modules/ni-webcharts-legends/dist/es5-minified/webcharts-legends.min.js"></script>
-
-    <script defer type="text/javascript" src="../node_modules/ni-webcharts/dist/es5-minified/element_registration.min.js"></script>
+    <script defer type="text/javascript" src="../webchartsLoader.js"></script>
 
     <style>
         #page-wrap {
