--- a/examples/multisim_parity.html
+++ b/examples/multisim_parity.html
@@ -21,10 +21,10 @@
         }
 
         p {
-            padding: 1cm 0cm 0cm 3cm;
+            padding: 1cm 0cm 0cm 0cm;
         }
         ul {
-            padding: 1em 0cm 0cm 5cm;
+            padding: 1em 0cm 0cm 2cm;
         }
 
         ni-cartesian-graph {
@@ -45,7 +45,8 @@
 
         ni-cartesian-graph text.axisLabels,
         .snapshot text.axisLabels {
-            font-family: "Times New Roman", serif;
+            font-family: "Times New Roman", sans-serif;
+            font-size: 14px;
             fill: #5f5f5f;
         }
 
@@ -82,17 +83,17 @@
         <br>
 
         <ni-cartesian-graph id="graph1" graph-ref="1602" value="[]">
-            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time(s)" axis-position="bottom" grid-lines auto-scale="none", minimum=200000 maximum=240000></ni-cartesian-axis>
-            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Voltage(V)" axis-position="left" grid-lines zoom="axis" pan="axis" auto-scale="none", minimum=0 maximum=35></ni-cartesian-axis>
-            <ni-cartesian-axis axis-ref = "CO2" show show-ticks show-minor-ticks show-label label="Current(A)" axis-position="right" zoom="axis" pan="axis" auto-scale="none" minimum=115 maximum=265></ni-cartesian-axis>
-            <ni-cartesian-plot show label="Temperature">
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time (s)" axis-position="bottom" grid-lines auto-scale="none", minimum=200000 maximum=240000></ni-cartesian-axis>
+            <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Voltage (V)" axis-position="left" grid-lines zoom="axis" pan="axis" auto-scale="none", minimum=0 maximum=35></ni-cartesian-axis>
+            <ni-cartesian-axis axis-ref = "CO2" show show-ticks show-minor-ticks show-label label="Current (A)" axis-position="right" zoom="axis" pan="axis" auto-scale="none" minimum=115 maximum=265></ni-cartesian-axis>
+            <ni-cartesian-plot show label="PR:A(2)">
                 <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
-            <ni-cartesian-plot show label="CO2" yaxis = "CO2">
+            <ni-cartesian-plot show label="PR:V(1)" yaxis = "CO2">
                 <ni-cartesian-plot-renderer line-width="0" point-shape="ellipse" point-color="#d6c100"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
-            <ni-cursor label="C1" show mode="y" show-thumbs="l" target-shape="diamond" crosshair-style="horizontal" y=0.2 x=0.3></ni-cursor>
-            <ni-cursor label="C2" show mode="xy" snap-to-plot="0" show-thumbs="t" target-shape="diamond" crosshair-style="both" interpolate></ni-cursor>
+            <ni-cursor show mode="y" show-thumbs="l" target-shape="diamond" crosshair-style="horizontal" y=0.2 x=0.3></ni-cursor>
+            <ni-cursor show mode="xy" snap-to-plot="0" show-thumbs="t" target-shape="diamond" crosshair-style="both" interpolate></ni-cursor>
         </ni-cartesian-graph>
         <ni-light-plot-legend show graph-ref="1602" position="ne"></ni-light-plot-legend>
 
