--- a/examples/multisim_parity.html
+++ b/examples/multisim_parity.html
@@ -4,6 +4,8 @@
 <head>
     <title>Multisim graph parity</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
+    <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.icons.css" />
+    <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.css" />
 
     <script>
         window.i18nPath = window.i18nPath || '../'; //relative to the user_app.html file
@@ -86,15 +88,16 @@
             <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Time (s)" axis-position="bottom" grid-lines auto-scale="none", minimum=200000 maximum=240000></ni-cartesian-axis>
             <ni-cartesian-axis show show-ticks show-minor-ticks show-label label="Voltage (V)" axis-position="left" grid-lines zoom="axis" pan="axis" auto-scale="none", minimum=0 maximum=35></ni-cartesian-axis>
             <ni-cartesian-axis axis-ref = "CO2" show show-ticks show-minor-ticks show-label label="Current (A)" axis-position="right" zoom="axis" pan="axis" auto-scale="none" minimum=115 maximum=265></ni-cartesian-axis>
-            <ni-cartesian-plot show label="PR:A(2)">
+            <ni-cartesian-plot show label="PR:A"  enable-hover>
                 <ni-cartesian-plot-renderer line-width="1"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
-            <ni-cartesian-plot show label="PR:V(1)" yaxis = "CO2">
+            <ni-cartesian-plot show label="PR:V" yaxis = "CO2" enable-hover>
                 <ni-cartesian-plot-renderer line-width="0" point-shape="ellipse" point-color="#d6c100"></ni-cartesian-plot-renderer>
             </ni-cartesian-plot>
             <ni-cursor show mode="y" show-thumbs="l" target-shape="diamond" crosshair-style="horizontal" y=0.2 x=0.3></ni-cursor>
-            <ni-cursor show mode="xy" snap-to-plot="0" show-thumbs="t" target-shape="diamond" crosshair-style="both" interpolate></ni-cursor>
+            <ni-cursor show mode="xy" snap-to-plot="0" show-thumbs="t" target-shape="diamond" crosshair-style="both"></ni-cursor>
         </ni-cartesian-graph>
+        <ni-graph-tools graph-ref='1602'></ni-graph-tools>
         <ni-light-plot-legend show graph-ref="1602" position="ne"></ni-light-plot-legend>
 
         <p>
