Fix index page and document title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
     <link rel="stylesheet" href="cards.css" />
     <meta name="viewport" content="width=device-width">
-    <title>Webcharts performance</title>
+    <title>Webcharts Drive Test</title>
   </head>
   <body>
-    <h1 style="text-align:center;">Webcharts test drive</h1>
+    <h1 style="text-align:center;">Webcharts Drive Test</h1>
     <div id="mainbox">
         <div class="card">
             <img src="line-chart.svg">
