More title/h1 fixes

--- a/examples/chart_demo.html
+++ b/examples/chart_demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Demo Chart</title>
+    <title>Waveform generator connected to a Chart</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
     <link rel="stylesheet" href="../node_modules/jqwidgets-scripts/jqwidgets/styles/jqx.base.css" />
     <link rel="stylesheet" href="../node_modules/jqwidgets-scripts/jqwidgets/styles/jqx.fresh.css" />
