--- a/examples/graph_dark.html
+++ b/examples/graph_dark.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webcharts Graph</title>
+    <title>Webcharts Graph Dark</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsDark.css" />
 
     <script>
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body style ="background-color: #303030; color: #e0e0e0">
-    <h1>Webcharts Graph</h1>
+    <h1>Webcharts Graph Dark</h1>
 
     <h2>Arrays of numbers</h2>
     <ni-cartesian-graph id="graph1" value="[[0, 10, 200, 3, 40, 500, 6, 70, 800], [1, 20, 600, 40, 5]]">
