--- a/examples/intensity.html
+++ b/examples/intensity.html
@@ -30,7 +30,7 @@
 
 <body>
     <div id="page-wrap">
-        <h1>Intensity graph</h1>
+        <h1>Intensity graph with logarithmic axes</h1>
 
         <ni-intensity-graph id="intensity1">
           <ni-cartesian-axis id="horizontalAxis" show log-scale show-ticks show-minor-ticks show-tick-labels="all" grid-lines show-label label="Width" axis-position="bottom" minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
