--- a/performance/chart.html
+++ b/performance/chart.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Webcharts Chart performance</h1>
+    <h1>Webcharts Chart performance test</h1>
 
     <ni-chart id="graph1" buffer-size="100000">
       <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom"></ni-cartesian-axis>
