--- a/performance/graph with cursor.html
+++ b/performance/graph with cursor.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webcharts Graph performance test</title>
+    <title>Webcharts Graph with cursor performance test</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
 
     <script>
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Webcharts Graph</h1>
+    <h1>Webcharts Graph with cursor performance test</h1>
 
     <h2>Array of numbers</h2>
     <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
