--- a/performance/graph_analogWaveform.html
+++ b/performance/graph_analogWaveform.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webcharts Graph performance test</title>
+    <title>Webcharts Graph with AnalogWaveform performance test</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
 
     <script>
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h2>AnalogWaveform Graph</h2>
+    <h2>Webcharts Graph with AnalogWaveform performance test</h2>
     <ni-cartesian-graph id="graph" value="[]">
       <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom"  format="LVTime"></ni-cartesian-axis>
       <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" ></ni-cartesian-axis>
