--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webcharts Graph performance test</title>
+    <title>Webcharts Scatter Graph performance test</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
 
     <script>
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Webcharts Graph performance</h1>
+    <h1>Webcharts Scatter Graph performance</h1>
 
     <ni-cartesian-graph id="graph1" value="[]">
       <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" ></ni-cartesian-axis>
