--- a/examples/reactGraph.html
+++ b/examples/reactGraph.html
@@ -65,7 +65,7 @@
     </head>
 
     <body>
-        <h1>Webcharts Graph</h1>
+        <h1>Webcharts Graph with React</h1>
 
         <h2>Arrays of numbers</h2>
 
