--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <tr><td style="padding-left: 1em"><a href="examples/intensity.html">Intensity</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/bouncingcog.html">XY Graph</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/multisim_parity.html">Multisim parity</a></td></tr>
-                    <tr><td style="padding-left: 1em"><a href="examples/reactGraph.html">Graph using React</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="examples/reactGraph.html">Graph with React</a></td></tr>
                 </tbody></table>
         </div>
         <div class="card">
