Added 'overflow: hidden' to ni-scale-legend style, to hide the scrollbar.

--- a/examples/reactGraph.html
+++ b/examples/reactGraph.html
@@ -54,6 +54,7 @@
                 left: 799px;
                 top: 328px;
                 height: 70px;
+                overflow: hidden;
             }
 
             ni-cursor-legend {
